force-app/main/default/objects/CreditApprovalMatrix__c/CreditApprovalMatrix__c.object-meta.xml
<CustomObject>
    <description>Object used by the credit disputes team to manage the approvers at each step of the approval process.</description>
    <label>Credit Approval Matrix</label>
    <nameField>
        <displayFormat>CAM-{0000}</displayFormat>
        <label>Credit Approval Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>