force-app/main/default/objects/CreditApprovalMatrix__c/fields/Approver2Role__c.field-meta.xml
<CustomField>
    <fullName>Approver2Role__c</fullName>
    <description>Role of the second approver for this credit approval record (e.g. &quot;Customer Resolutions Manager&quot;, &quot;CEO&quot;).</description>
    <inlineHelpText>Role of the second approver for this credit approval record (e.g. &quot;Customer Resolutions Manager&quot;, &quot;CEO&quot;).</inlineHelpText>
    <label>Approver 2 Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditApprovalRoles</valueSetName>
    </valueSet>
</CustomField>