force-app/main/default/objects/CreditApprovalMatrix__c/fields/Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Credit Approval Matrix (Approver 1)</relationshipLabel>
    <relationshipName>Credit_Approval_Matrix1</relationshipName>
    <type>Lookup</type>
</CustomField>