force-app/main/default/objects/CreditApprovalMatrix__c/fields/Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Credit Approval Matrix (Approver 2)</relationshipLabel>
    <relationshipName>Credit_Approval_Matrix2</relationshipName>
    <type>Lookup</type>
</CustomField>