force-app/main/default/objects/CreditApprovalMatrix__c/fields/Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Credit Approval Matrix (Approver 3)</relationshipLabel>
    <relationshipName>Credit_Approval_Matrix3</relationshipName>
    <type>Lookup</type>
</CustomField>