force-app/main/default/objects/CreditApprovalMatrix__c/fields/FromCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>FromCreditAmount__c</fullName>
    <description>Minimum credit amount applicable to this Credit Approval Matrix record.</description>
    <inlineHelpText>Minimum credit amount applicable to this Credit Approval Matrix record.</inlineHelpText>
    <label>From Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>