force-app/main/default/objects/CreditApprovalMatrix__c/fields/HeadOfProduct__c.field-meta.xml
<CustomField>
    <fullName>HeadOfProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. DO NOT USE.</description>
    <label>Head Of Product (DEPRECATED)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CAM_HeadOfProduct</relationshipName>
    <type>Lookup</type>
</CustomField>