force-app/main/default/objects/CreditApprovalMatrix__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parcels</fullName>
            </value>
            <value>
                <fullName>Letters</fullName>
            </value>
            <value>
                <fullName>Trusted Services</fullName>
            </value>
            <value>
                <fullName>default</fullName>
            </value>
            <value>
                <fullName>Business Credit Account Facilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>