force-app/main/default/objects/CreditApprovalMatrix__c/fields/ToCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>ToCreditAmount__c</fullName>
    <description>Maximum credit amount applicable to this Credit Approval Matrix record.</description>
    <inlineHelpText>Maximum credit amount applicable to this Credit Approval Matrix record.</inlineHelpText>
    <label>To Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>