force-app/main/default/objects/CreditApprovalMatrix__c/recordTypes/Default_I2C_CAM.recordType-meta.xml
<RecordType>
    <fullName>Default_I2C_CAM</fullName>
    <active>true</active>
    <description>Use this to create an Invoice to Cash Credit Approval Matrix</description>
    <label>Default I2C CAM</label>
</RecordType>