force-app/main/default/objects/CreditApprovalMatrix__c/recordTypes/General_CAM.recordType-meta.xml
<RecordType>
    <fullName>General_CAM</fullName>
    <active>true</active>
    <description>Use this to create a General Credit Approval Matrix</description>
    <label>General CAM</label>
</RecordType>