force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/Approver1Role_Required_If_Approver1_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver1Role_Required_If_Approver1_Set</fullName>
    <active>true</active>
    <description>Ensure Approver 1 Role is populated when Approver 1 is specified.</description>
    <errorConditionFormula>AND( NOT(AutoApprove__c) , NOT( ISBLANK(Approver_1__c) ) ,
 ISBLANK(TEXT( Approver1Role__c )) )</errorConditionFormula>
    <errorDisplayField>Approver1Role__c</errorDisplayField>
    <errorMessage>The Approver 1 Role cannot be left empty if the Approver 1 user has been specified.</errorMessage>
</ValidationRule>