force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/Approver3Role_Required_If_Approver3_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver3Role_Required_If_Approver3_Set</fullName>
    <active>true</active>
    <description>Ensure Approver 3 Role is populated when Approver 3 is specified.</description>
    <errorConditionFormula>AND( NOT(AutoApprove__c) , NOT( ISBLANK(Approver_3__c) ) ,
 ISBLANK(TEXT( Approver3Role__c )) )</errorConditionFormula>
    <errorDisplayField>Approver3Role__c</errorDisplayField>
    <errorMessage>The Approver 3 Role cannot be left empty if the Approver 3 user has been specified.</errorMessage>
</ValidationRule>