force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/Approver5Role_Required_If_Approver5_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver5Role_Required_If_Approver5_Set</fullName>
    <active>true</active>
    <description>Ensure Approver 5 Role is populated when Approver 5 is specified.</description>
    <errorConditionFormula>AND( NOT(AutoApprove__c) , NOT( ISBLANK(Approver_5__c) ) ,
 ISBLANK(TEXT( Approver5Role__c )) )</errorConditionFormula>
    <errorDisplayField>Approver5Role__c</errorDisplayField>
    <errorMessage>The Approver 5 Role cannot be left empty if the Approver 5 user has been specified.</errorMessage>
</ValidationRule>