force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/Approver6Role_Required_If_Approver6_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver6Role_Required_If_Approver6_Set</fullName>
    <active>true</active>
    <description>Ensure Approver 6 Role is populated when Approver 6 is specified.</description>
    <errorConditionFormula>AND( NOT(AutoApprove__c) , NOT( ISBLANK(Approver_6__c) ) ,
 ISBLANK(TEXT( Approver6Role__c )) )</errorConditionFormula>
    <errorDisplayField>Approver6Role__c</errorDisplayField>
    <errorMessage>The Approver 6 Role cannot be left empty if the Approver 6 user has been specified.</errorMessage>
</ValidationRule>