force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/Approver_3_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_3_Required</fullName>
    <active>true</active>
    <description>Ensure Approver 3 is specified if Approver4, Approver5 or Approver6 is populated,</description>
    <errorConditionFormula>AND(  ISBLANK(Approver_3__c) ,
    NOT(AutoApprove__c) ,  
    NOT( AND( ISBLANK(Approver_4__c), ISBLANK(Approver_5__c), ISBLANK(Approver_6__c) ))
)</errorConditionFormula>
    <errorDisplayField>Approver_3__c</errorDisplayField>
    <errorMessage>You must specify Approver 3.</errorMessage>
</ValidationRule>