force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/Approver_4_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_4_Required</fullName>
    <active>true</active>
    <description>Ensure Approver 4 is specified if Approver5 or Approver6 is populated,</description>
    <errorConditionFormula>AND(  ISBLANK(Approver_4__c) , 
    NOT(AutoApprove__c) , 
    NOT( AND( ISBLANK(Approver_5__c), ISBLANK(Approver_6__c) ))
)</errorConditionFormula>
    <errorDisplayField>Approver_4__c</errorDisplayField>
    <errorMessage>You must specify Approver 4.</errorMessage>
</ValidationRule>