force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/Approver_5_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_5_Required</fullName>
    <active>true</active>
    <description>Ensure Approver 5 is specified if Approver6 is populated,</description>
    <errorConditionFormula>AND(  ISBLANK(Approver_5__c) , 
    NOT(AutoApprove__c) , 
    NOT( ISBLANK(Approver_6__c) )
)</errorConditionFormula>
    <errorDisplayField>Approver_5__c</errorDisplayField>
    <errorMessage>You must specify Approver 5.</errorMessage>
</ValidationRule>