force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/From_and_To_Credit_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>From_and_To_Credit_Amount_Check</fullName>
    <active>true</active>
    <description>Ensure From Credit Amount is less than To Credit Amoint.</description>
    <errorConditionFormula>FromCreditAmount__c  &gt;  ToCreditAmount__c</errorConditionFormula>
    <errorMessage>The From Credit Amount must be less than the To Credit Amount.</errorMessage>
</ValidationRule>