force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/From_Credit_Amount_Cannot_Be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Credit_Amount_Cannot_Be_Zero</fullName>
    <active>true</active>
    <description>Ensure From Credit Amount is greater than zero.</description>
    <errorConditionFormula>FromCreditAmount__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>FromCreditAmount__c</errorDisplayField>
    <errorMessage>The From Credit Amount must be greater than $0.</errorMessage>
</ValidationRule>