force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/NullGMofSales.validationRule-meta.xml
<ValidationRule>
    <fullName>NullGMofSales</fullName>
    <active>false</active>
    <description>This validation for if Product Family and Product Sub Category field value is default and GM of Sales field value is mandatory.</description>
    <errorConditionFormula>AND(ISPICKVAL(Product_Family__c, &apos;default&apos;),
ISPICKVAL(Product_Sub_Category__c, &apos;default&apos;),
ISBLANK(GMOfSales__c))</errorConditionFormula>
    <errorDisplayField>GMOfSales__c</errorDisplayField>
    <errorMessage>Please provide a GM of Sales</errorMessage>
</ValidationRule>