force-app/main/default/objects/CreditApprovalMatrix__c/validationRules/NullSalesDirector.validationRule-meta.xml
<ValidationRule>
    <fullName>NullSalesDirector</fullName>
    <active>false</active>
    <description>This validation for if Product Family and Product Sub Category field value is default and fields are mandatory.</description>
    <errorConditionFormula>AND(ISPICKVAL(Product_Family__c, &apos;default&apos;),
ISPICKVAL(Product_Sub_Category__c, &apos;default&apos;),
ISBLANK(SalesDirector__c))</errorConditionFormula>
    <errorDisplayField>SalesDirector__c</errorDisplayField>
    <errorMessage>Please provide a Sales Director</errorMessage>
</ValidationRule>