force-app/main/default/objects/CreditApprovalMatrix__c/listViews/Default_Approvers.listView-meta.xml
<ListView>
    <fullName>Default_Approvers</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Sub_Category__c</columns>
    <columns>CreditType__c</columns>
    <columns>FromCreditAmount__c</columns>
    <columns>ToCreditAmount__c</columns>
    <columns>AutoApprove__c</columns>
    <columns>Approver_1__c</columns>
    <columns>Approver_2__c</columns>
    <columns>Approver_3__c</columns>
    <columns>Approver_4__c</columns>
    <columns>Approver_5__c</columns>
    <columns>Approver_6__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family__c</field>
        <operation>contains</operation>
        <value>default</value>
    </filters>
    <label>Default Approvers</label>
    <language>en_US</language>
</ListView>