force-app/main/default/objects/CreditApprovalMatrix__c/listViews/LatePayment.listView-meta.xml
<ListView>
    <fullName>LatePayment</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Sub_Category__c</columns>
    <columns>CreditType__c</columns>
    <columns>FromCreditAmount__c</columns>
    <columns>ToCreditAmount__c</columns>
    <columns>AutoApprove__c</columns>
    <columns>Approver1Role__c</columns>
    <columns>Approver2Role__c</columns>
    <columns>Approver3Role__c</columns>
    <columns>Approver4Role__c</columns>
    <columns>Approver5Role__c</columns>
    <columns>Approver6Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Sub_Category__c</field>
        <operation>equals</operation>
        <value>Late Payment Charge</value>
    </filters>
    <label>Late Payment</label>
    <language>en_US</language>
</ListView>